// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField has correct default options 1`] = `
<div
  className="grommetux-form-field grommetux-form-field--text grommetux-form-field--size-medium"
  onClick={[Function]}
>
  <label
    className="grommetux-form-field__label"
    htmlFor="item1"
  >
    Item 1
  </label>
  <span
    className="grommetux-form-field__contents"
  >
    <input
      id="item1"
      type="text"
    />
  </span>
</div>
`;

exports[`FormField renders a class name 1`] = `
<div
  className="grommetux-form-field grommetux-form-field--text grommetux-form-field--size-medium test"
  onClick={[Function]}
>
  <label
    className="grommetux-form-field__label"
    htmlFor="item1"
  >
    Item 1
  </label>
  <span
    className="grommetux-form-field__contents"
  >
    <input
      id="item1"
      type="text"
    />
  </span>
</div>
`;

exports[`FormField renders microdata properties 1`] = `
<div
  className="grommetux-form-field grommetux-form-field--text grommetux-form-field--size-medium"
  itemProp="test"
  itemScope={true}
  itemType="http://schema.org/Article"
  onClick={[Function]}
>
  <label
    className="grommetux-form-field__label"
    htmlFor="item1"
  >
    Item 1
  </label>
  <span
    className="grommetux-form-field__contents"
  >
    <input
      id="item1"
      type="text"
    />
  </span>
</div>
`;
